src/snapshots/matcha__renderer__test__render_if_else_statement.snap
---
source: src/renderer.rs
expression: "{> with is_user as Bool\nHello {% if is_user %}User{% else %}Unknown{% endif %}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_tree(is_user is_user: Bool) -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Hello ")
    let tree = case is_user {
        True -> {
                let tree = string_tree.append(tree, "User")

            tree
        }
        False -> {
                let tree = string_tree.append(tree, "Unknown")

            tree
        }
}

    tree
}

pub fn render(is_user is_user: Bool) -> String {
    string_tree.to_string(render_tree(is_user: is_user))
}
