src/snapshots/matcha__renderer__test__render_if_statement.snap
---
source: src/renderer.rs
expression: "{> with is_user as Bool\nHello {% if is_user %}User{% endif %}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_tree(is_user is_user: Bool) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Hello ")
    let builder = case is_user {
        True -> {
                let builder = string_tree.append(builder, "User")

            builder
        }
        False -> {
            
            builder
        }
}

    builder
}

pub fn render(is_user is_user: Bool) -> String {
    string_tree.to_string(render_tree(is_user: is_user))
}
