src/snapshots/matcha__renderer__test__render_import.snap
---
source: src/renderer.rs
expression: "{> import user.{User}\n{> with name as String\n{{ name }}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}

import user.{User}

pub fn render_tree(name name: String) -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, name)

    tree
}

pub fn render(name name: String) -> String {
    string_tree.to_string(render_tree(name: name))
}
