src/snapshots/matcha__renderer__test__render_only_public_functions.snap
---
source: src/renderer.rs
expression: "\n{> pub fn classes()\n    a b c d\n{> endfn\n\n{> pub fn item(name: String)\n    <li class=\"item\">{{ name }}</li>\n{> endfn\n"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}

pub fn classes() -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "    a b c d")

    builder
}

pub fn item(name: String) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "    <li class=\"item\">")
    let builder = string_tree.append(builder, name)
    let builder = string_tree.append(builder, "</li>")

    builder
}
