src/snapshots/matcha__renderer__test__render_public_function.snap
---
source: src/renderer.rs
expression: "{> pub fn classes()\na b c d\n{> endfn\nHello world"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}

pub fn classes() -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "a b c d")

    tree
}

pub fn render_tree() -> StringTree {
    let tree = string_tree.from_string("")
    let tree = string_tree.append(tree, "Hello world")

    tree
}

pub fn render() -> String {
    string_tree.to_string(render_tree())
}
