src/snapshots/matcha__renderer__test__render_tree_block.snap
---
source: src/renderer.rs
expression: "{> with name as StringTree\nHello {[ name ]}, good to meet you"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_tree(name name: StringTree) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Hello ")
    let builder = string_tree.append_tree(builder, name)
    let builder = string_tree.append(builder, ", good to meet you")

    builder
}

pub fn render(name name: StringTree) -> String {
    string_tree.to_string(render_tree(name: name))
}
