src/snapshots/matcha__renderer__test__render_tree_expression.snap
---
source: src/renderer.rs
expression: "Hello {[ string_tree.from_strings([\"Anna\", \" and \", \"Bob\"]) ]}, good to meet you"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_tree() -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Hello ")
    let builder = string_tree.append_tree(builder, string_tree.from_strings(["Anna", " and ", "Bob"]))
    let builder = string_tree.append(builder, ", good to meet you")

    builder
}

pub fn render() -> String {
    string_tree.to_string(render_tree())
}
