src/snapshots/matcha__renderer__test__render_two_identifiers.snap
---
source: src/renderer.rs
expression: "{> with name as String\n{> with adjective as String\nHello {{ name }}, {{ adjective }} to meet you"
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_builder(name name: String, adjective adjective: String) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, "Hello ")
    let builder = string_tree.append(builder, name)
    let builder = string_tree.append(builder, ", ")
    let builder = string_tree.append(builder, adjective)
    let builder = string_tree.append(builder, " to meet you")

    builder
}

pub fn render(name name: String, adjective adjective: String) -> String {
    string_tree.to_string(render_builder(name: name, adjective: adjective))
}
