src/snapshots/matcha__renderer__test__render_with.snap
---
source: src/renderer.rs
expression: "{> with user as User\n{{ user }}"
snapshot_kind: text
---
// DO NOT EDIT: Code generated by matcha from -test-

import gleam/string_tree.{type StringTree}



pub fn render_tree(user user: User) -> StringTree {
    let builder = string_tree.from_string("")
    let builder = string_tree.append(builder, user)

    builder
}

pub fn render(user user: User) -> String {
    string_tree.to_string(render_tree(user: user))
}
